@@ -1,4 +1,7 @@
 
+=== (next) ===
+CHANGED: updated to the latest Hunter
+
 === 0.2.1 (2018-09-23) ===
 FIXED: missing optional construct()/destruct() in IMemPool::Allocator
 NEW: minor refactoring of AsyncSteps internals
